[UPDATE]/Add multi-language support across services by introducing language parameters in various DTOs, enhancing email notifications, and refining frontend assets for improved user experience.

--- a/Frontend/html/auth/login.html
+++ b/Frontend/html/auth/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html
   lang="en"
@@ -6,12 +6,14 @@
   dir="ltr"
   data-theme="theme-default"
   data-assets-path="../../assets/"
-  data-template="vertical-menu-template">
+  data-template="vertical-menu-template"
+>
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
     <title data-i18n="loginTitle">Login - EDISA</title>
 
@@ -22,7 +24,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <!-- Icons -->
     <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
@@ -30,23 +33,46 @@
     <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/core.css"
+      class="template-customizer-core-css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/theme-default.css"
+      class="template-customizer-theme-css"
+    />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/node-waves/node-waves.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/typeahead-js/typeahead.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/node-waves/node-waves.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+    />
     <!-- Vendor -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+    />
 
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
 
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
@@ -59,9 +85,9 @@
 
   <body>
     <script>
-      const token = localStorage.getItem('authToken');
+      const token = localStorage.getItem("authToken");
       if (token) {
-        window.location.href = '/admin/index.html';
+        window.location.href = "/admin/index.html";
       }
     </script>
     <!-- Content -->
@@ -72,23 +98,45 @@
           <!-- Language Dropdown -->
           <div class="d-flex justify-content-end mb-3">
             <div class="dropdown-language dropdown me-2 me-xl-0">
-              <a class="btn btn-outline-secondary dropdown-toggle" href="javascript:void(0);" data-bs-toggle="dropdown">
+              <a
+                class="btn btn-outline-secondary dropdown-toggle"
+                href="javascript:void(0);"
+                data-bs-toggle="dropdown"
+              >
                 <i class="ti ti-language rounded-circle ti-md"></i>
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="vi">
-                    <span class="align-middle" data-i18n="vietnamese">Vietnamese</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="vi"
+                  >
+                    <span class="align-middle" data-i18n="vietnamese"
+                      >Vietnamese</span
+                    >
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="en">
-                    <span class="align-middle" data-i18n="english">English</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="en"
+                  >
+                    <span class="align-middle" data-i18n="english"
+                      >English</span
+                    >
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="ja">
-                    <span class="align-middle" data-i18n="japanese">Japanese</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="ja"
+                  >
+                    <span class="align-middle" data-i18n="japanese"
+                      >Japanese</span
+                    >
                   </a>
                 </li>
               </ul>
@@ -127,28 +175,50 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
-                  <img src="../../assets/img/branding/logo-i-vuexy.svg" alt="EDISA Logo" style="height:40px;width:auto;">
-                  <span class="app-brand-text demo text-body fw-bold ms-1">EDISA</span>
+                  <img
+                    src="../../assets/img/branding/logo-i-vuexy.svg"
+                    alt="EDISA Logo"
+                    style="height: 40px; width: auto"
+                  />
+                  <span class="app-brand-text demo text-body fw-bold ms-1"
+                    >EDISA</span
+                  >
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-1 pt-2" data-i18n="loginWelcome">Welcome to EDISA! 👋</h4>
-              <p class="mb-4" data-i18n="loginSignInDesc">Please sign-in to your account and start the adventure</p>
+              <h4 class="mb-1 pt-2" data-i18n="loginWelcome">
+                Welcome to EDISA! 👋
+              </h4>
+              <p class="mb-4" data-i18n="loginSignInDesc">
+                Please sign-in to your account and start the adventure
+              </p>
 
               <form id="login-form" class="mb-3">
                 <div class="mb-3">
-                  <label for="login-email" class="form-label" data-i18n="email">Email</label>
+                  <label for="login-email" class="form-label" data-i18n="email"
+                    >Email</label
+                  >
                   <input
                     type="text"
                     class="form-control"
                     id="login-email"
                     name="email"
-                    data-i18n-placeholder="enterEmail" />
+                    data-i18n-placeholder="enterEmail"
+                    autofocus
+                  />
                 </div>
                 <div class="mb-3 form-password-toggle">
                   <div class="d-flex justify-content-between">
-                    <label class="form-label" for="password" data-i18n="password">Password</label>
-                    <a href="javascript:void(0)" onclick="window.location.href='/forgot-password'">
+                    <label
+                      class="form-label"
+                      for="password"
+                      data-i18n="password"
+                      >Password</label
+                    >
+                    <a
+                      href="javascript:void(0)"
+                      onclick="window.location.href='/forgot-password'"
+                    >
                       <small data-i18n="forgotPassword">Forgot Password?</small>
                     </a>
                   </div>
@@ -158,25 +228,46 @@
                       id="login-password"
                       class="form-control"
                       name="password"
-                      data-i18n-placeholder="enterPassword" />
-                    <span class="input-group-text cursor-pointer"><i class="ti ti-eye-off"></i></span>
+                      data-i18n-placeholder="enterPassword"
+                    />
+                    <span class="input-group-text cursor-pointer"
+                      ><i class="ti ti-eye-off"></i
+                    ></span>
                   </div>
                 </div>
                 <div class="mb-3">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="remember-me" />
-                    <label class="form-check-label" for="remember-me" data-i18n="rememberMe"> Remember Me </label>
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="remember-me"
+                    />
+                    <label
+                      class="form-check-label"
+                      for="remember-me"
+                      data-i18n="rememberMe"
+                    >
+                      Remember Me
+                    </label>
                   </div>
                 </div>
                 <div class="mb-3">
-                  <button type="submit" class="btn btn-primary d-grid w-100" data-i18n="signIn">Sign in</button>
+                  <button
+                    type="submit"
+                    class="btn btn-primary d-grid w-100"
+                    data-i18n="signIn"
+                  >
+                    Sign in
+                  </button>
                 </div>
-
               </form>
 
               <p class="text-center">
                 <span data-i18n="newOnPlatform">New on our platform?</span>
-                <a href="javascript:void(0)" onclick="window.location.href='/register'">
+                <a
+                  href="javascript:void(0)"
+                  onclick="window.location.href='/register'"
+                >
                   <span data-i18n="createAccount">Create an account</span>
                 </a>
               </p>
@@ -186,11 +277,18 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <a href="javascript:;" class="btn btn-icon btn-label-facebook me-3">
+                <a
+                  href="javascript:;"
+                  class="btn btn-icon btn-label-facebook me-3"
+                >
                   <i class="tf-icons fa-brands fa-facebook-f fs-5"></i>
                 </a>
 
-                <a href="javascript:;" id="google-login-btn" class="btn btn-icon btn-label-google-plus me-3">
+                <a
+                  href="javascript:;"
+                  id="google-login-btn"
+                  class="btn btn-icon btn-label-google-plus me-3"
+                >
                   <i class="tf-icons fa-brands fa-google fs-5"></i>
                 </a>
 
@@ -223,6 +321,7 @@
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../../js/error-handler.js"></script>
     <script type="module" src="../../js/auth-utils.js"></script>
     <script type="module" src="../../js/api.js"></script>
     <script type="module" src="../../js/auth-forms.js"></script>
