--- a/Frontend/html/auth/verify-email.html
+++ b/Frontend/html/auth/verify-email.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html
   lang="en"
@@ -6,14 +6,18 @@
   dir="ltr"
   data-theme="theme-default"
   data-assets-path="../../assets/"
-  data-template="vertical-menu-template">
+  data-template="vertical-menu-template"
+>
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
-    <title data-i18n="verifyEmailTitle">Account Created Successfully - EDISA</title>
+    <title data-i18n="verifyEmailTitle">
+      Account Created Successfully - EDISA
+    </title>
 
     <meta name="description" content="" />
 
@@ -22,7 +26,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <!-- Icons -->
     <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
@@ -30,14 +35,31 @@
     <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/core.css"
+      class="template-customizer-core-css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/theme-default.css"
+      class="template-customizer-theme-css"
+    />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/node-waves/node-waves.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/typeahead-js/typeahead.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/node-waves/node-waves.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+    />
 
     <!-- Page CSS -->
     <!-- Page -->
@@ -60,23 +82,43 @@
         <!-- Language Dropdown -->
         <div class="d-flex justify-content-end mb-3">
           <div class="dropdown-language dropdown me-2 me-xl-0">
-            <a class="btn btn-outline-secondary dropdown-toggle" href="javascript:void(0);" data-bs-toggle="dropdown">
+            <a
+              class="btn btn-outline-secondary dropdown-toggle"
+              href="javascript:void(0);"
+              data-bs-toggle="dropdown"
+            >
               <i class="ti ti-language rounded-circle ti-md"></i>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li>
-                <a class="dropdown-item" href="javascript:void(0);" data-language="vi">
-                  <span class="align-middle" data-i18n="vietnamese">Vietnamese</span>
+                <a
+                  class="dropdown-item"
+                  href="javascript:void(0);"
+                  data-language="vi"
+                >
+                  <span class="align-middle" data-i18n="vietnamese"
+                    >Vietnamese</span
+                  >
                 </a>
               </li>
               <li>
-                <a class="dropdown-item" href="javascript:void(0);" data-language="en">
+                <a
+                  class="dropdown-item"
+                  href="javascript:void(0);"
+                  data-language="en"
+                >
                   <span class="align-middle" data-i18n="english">English</span>
                 </a>
               </li>
               <li>
-                <a class="dropdown-item" href="javascript:void(0);" data-language="ja">
-                  <span class="align-middle" data-i18n="japanese">Japanese</span>
+                <a
+                  class="dropdown-item"
+                  href="javascript:void(0);"
+                  data-language="ja"
+                >
+                  <span class="align-middle" data-i18n="japanese"
+                    >Japanese</span
+                  >
                 </a>
               </li>
             </ul>
@@ -89,7 +131,7 @@
             <!-- Logo -->
             <div class="app-brand justify-content-center mb-4 mt-2">
               <a href="/" class="app-brand-link gap-2">
-                                  <!-- <span class="app-brand-logo demo">
+                <!-- <span class="app-brand-logo demo">
                     <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         fill-rule="evenodd"
@@ -115,17 +157,40 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
-                  <img src="../../assets/img/branding/logo-i-vuexy.svg" alt="EDISA Logo" style="height:40px;width:auto;">
-                <span class="app-brand-text demo text-body fw-bold ms-1">EDISA</span>
+                <img
+                  src="../../assets/img/branding/logo-i-vuexy.svg"
+                  alt="EDISA Logo"
+                  style="height: 40px; width: auto"
+                />
+                <span class="app-brand-text demo text-body fw-bold ms-1"
+                  >EDISA</span
+                >
               </a>
             </div>
             <!-- /Logo -->
-            <h4 class="mb-1 pt-2" data-i18n="verifyEmailTitle">Account Created Successfully! 🎉</h4>
-            <p class="text-start mb-4" data-i18n="verifyEmailDesc">Your account has been created successfully! A verification email has been sent to your email address: <span id="userEmail" class="fw-medium" data-i18n="loading">Loading...</span>. Please check your email and click the verification link to activate your account.</p>
-            <a class="btn btn-primary w-100 mb-3" href="/" data-i18n="goToLogin">Go to Login</a>
+            <h4 class="mb-1 pt-2" data-i18n="verifyEmailTitle">
+              Account Created Successfully! 🎉
+            </h4>
+            <p class="text-start mb-4" data-i18n="verifyEmailDesc">
+              Your account has been created successfully! A verification email
+              has been sent to your email address:
+              <span id="userEmail" class="fw-medium">Loading...</span>. Please
+              check your email and click the verification link to activate your
+              account.
+            </p>
+            <a class="btn btn-primary w-100 mb-3" href="/" data-i18n="goToLogin"
+              >Go to Login</a
+            >
             <p class="text-center mb-0">
-              <span data-i18n="notReceivedEmail">Didn't receive the email?</span>
-              <a href="javascript:void(0);" id="resendLink" data-i18n="resendVerification">Resend Verification Email</a>
+              <span data-i18n="notReceivedEmail"
+                >Didn't receive the email?</span
+              >
+              <a
+                href="javascript:void(0);"
+                id="resendLink"
+                data-i18n="resendVerification"
+                >Resend Verification Email</a
+              >
             </p>
           </div>
         </div>
@@ -156,15 +221,83 @@
     <script type="module" src="../../js/auth-forms.js"></script>
 
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const userEmailElement = document.getElementById('userEmail');
-        const pendingEmail = localStorage.getItem('pendingVerificationEmail');
-        
-        if (pendingEmail) {
-          userEmailElement.textContent = pendingEmail;
-          localStorage.removeItem('pendingVerificationEmail');
-        } else {
-          userEmailElement.textContent = 'Email not available';
+      // Wait for i18n to be initialized before updating email
+      function updateUserEmail() {
+        const userEmailElement = document.getElementById("userEmail");
+        if (userEmailElement) {
+          const pendingEmail = localStorage.getItem("pendingVerificationEmail");
+
+          console.log("Updating user email, pendingEmail:", pendingEmail);
+
+          if (pendingEmail) {
+            userEmailElement.textContent = pendingEmail;
+            localStorage.removeItem("pendingVerificationEmail");
+            console.log("Email updated successfully:", pendingEmail);
+            return true;
+          } else {
+            const fallbackText = window.i18next
+              ? window.i18next.t("emailNotAvailable")
+              : "Email not available";
+            userEmailElement.textContent = fallbackText;
+            console.log(
+              "No pending email found, using fallback:",
+              fallbackText,
+            );
+            return true;
+          }
+        }
+        console.log("userEmail element not found");
+        return false;
+      }
+
+      document.addEventListener("DOMContentLoaded", updateUserEmail);
+
+      setTimeout(updateUserEmail, 100);
+      setTimeout(updateUserEmail, 500);
+      setTimeout(updateUserEmail, 1000);
+      setTimeout(updateUserEmail, 2000);
+      setTimeout(updateUserEmail, 3000);
+
+      if (window.i18next) {
+        window.i18next.on("languageChanged", updateUserEmail);
+        window.i18next.on("initialized", updateUserEmail);
+      }
+
+      window.addEventListener("load", updateUserEmail);
+
+      if (window.i18next && window.i18next.isInitialized) {
+        updateUserEmail();
+      }
+
+      const observer = new MutationObserver(function (mutations) {
+        mutations.forEach(function (mutation) {
+          if (
+            mutation.type === "childList" &&
+            mutation.target.id === "userEmail"
+          ) {
+            const pendingEmail = localStorage.getItem(
+              "pendingVerificationEmail",
+            );
+            if (pendingEmail && mutation.target.textContent !== pendingEmail) {
+              console.log(
+                "MutationObserver: Email was changed by i18n, restoring:",
+                pendingEmail,
+              );
+              mutation.target.textContent = pendingEmail;
+              localStorage.removeItem("pendingVerificationEmail");
+            }
+          }
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const userEmailElement = document.getElementById("userEmail");
+        if (userEmailElement) {
+          observer.observe(userEmailElement, {
+            childList: true,
+            subtree: true,
+          });
+          console.log("MutationObserver started for userEmail element");
         }
       });
     </script>
