--- a/Frontend/html/auth/forgot-password.html
+++ b/Frontend/html/auth/forgot-password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html
   lang="en"
@@ -6,12 +6,14 @@
   dir="ltr"
   data-theme="theme-default"
   data-assets-path="../../assets/"
-  data-template="vertical-menu-template">
+  data-template="vertical-menu-template"
+>
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
     <title data-i18n="forgotPasswordTitle">Forgot Password - EDISA</title>
 
@@ -22,7 +24,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <!-- Icons -->
     <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
@@ -30,23 +33,46 @@
     <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/core.css"
+      class="template-customizer-core-css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/theme-default.css"
+      class="template-customizer-theme-css"
+    />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/node-waves/node-waves.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/typeahead-js/typeahead.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/node-waves/node-waves.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+    />
     <!-- Vendor -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+    />
 
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
 
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
@@ -66,23 +92,45 @@
           <!-- Language Dropdown -->
           <div class="d-flex justify-content-end mb-3">
             <div class="dropdown-language dropdown me-2 me-xl-0">
-              <a class="btn btn-outline-secondary dropdown-toggle" href="javascript:void(0);" data-bs-toggle="dropdown">
+              <a
+                class="btn btn-outline-secondary dropdown-toggle"
+                href="javascript:void(0);"
+                data-bs-toggle="dropdown"
+              >
                 <i class="ti ti-language rounded-circle ti-md"></i>
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="vi">
-                    <span class="align-middle" data-i18n="vietnamese">Vietnamese</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="vi"
+                  >
+                    <span class="align-middle" data-i18n="vietnamese"
+                      >Vietnamese</span
+                    >
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="en">
-                    <span class="align-middle" data-i18n="english">English</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="en"
+                  >
+                    <span class="align-middle" data-i18n="english"
+                      >English</span
+                    >
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="javascript:void(0);" data-language="ja">
-                    <span class="align-middle" data-i18n="japanese">Japanese</span>
+                  <a
+                    class="dropdown-item"
+                    href="javascript:void(0);"
+                    data-language="ja"
+                  >
+                    <span class="align-middle" data-i18n="japanese"
+                      >Japanese</span
+                    >
                   </a>
                 </li>
               </ul>
@@ -121,17 +169,33 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
-                  <img src="../../assets/img/branding/logo-i-vuexy.svg" alt="EDISA Logo" style="height:40px;width:auto;">
-                  <span class="app-brand-text demo text-body fw-bold ms-1">EDISA</span>
+                  <img
+                    src="../../assets/img/branding/logo-i-vuexy.svg"
+                    alt="EDISA Logo"
+                    style="height: 40px; width: auto"
+                  />
+                  <span class="app-brand-text demo text-body fw-bold ms-1"
+                    >EDISA</span
+                  >
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-1 pt-2" data-i18n="forgotPasswordTitle">Forgot Password? 🔒</h4>
-              <p class="mb-4" data-i18n="forgotPasswordDesc">Enter your email and we'll send you instructions to reset your password</p>
+              <h4 class="mb-1 pt-2" data-i18n="forgotPasswordTitle">
+                Forgot Password? 🔒
+              </h4>
+              <p class="mb-4" data-i18n="forgotPasswordDesc">
+                Enter your email and we'll send you instructions to reset your
+                password
+              </p>
 
               <form id="forgot-password-form" class="mb-3">
                 <div class="mb-3">
-                  <label for="forgot-password-email" class="form-label" data-i18n="email">Email</label>
+                  <label
+                    for="forgot-password-email"
+                    class="form-label"
+                    data-i18n="email"
+                    >Email</label
+                  >
                   <input
                     type="text"
                     class="form-control"
@@ -139,14 +203,24 @@
                     name="email"
                     data-i18n-placeholder="enterEmail"
                     placeholder="Enter your email"
-                    autofocus />
+                    autofocus
+                  />
                 </div>
-                <button type="submit" class="btn btn-primary d-grid w-100" data-i18n="sendResetLink">Send reset link</button>
-
+                <button
+                  type="submit"
+                  class="btn btn-primary d-grid w-100"
+                  data-i18n="sendResetLink"
+                >
+                  Send reset link
+                </button>
               </form>
 
               <div class="text-center">
-                <a href="javascript:void(0)" onclick="window.location.href='/'" class="d-flex align-items-center justify-content-center">
+                <a
+                  href="javascript:void(0)"
+                  onclick="window.location.href='/'"
+                  class="d-flex align-items-center justify-content-center"
+                >
                   <i class="ti ti-chevron-left scaleX-n1-rtl me-1"></i>
                   <span data-i18n="backToLogin">Back to login</span>
                 </a>
@@ -180,4 +254,4 @@
     <script type="module" src="../../js/api.js"></script>
     <script type="module" src="../../js/auth-forms.js"></script>
   </body>
-</html> 
+</html>
