--- a/Frontend/html/auth/reset-password.html
+++ b/Frontend/html/auth/reset-password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html
   lang="en"
@@ -6,12 +6,14 @@
   dir="ltr"
   data-theme="theme-default"
   data-assets-path="../../assets/"
-  data-template="vertical-menu-template">
+  data-template="vertical-menu-template"
+>
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
     <title data-i18n="resetPasswordTitle">Reset Password - EDISA</title>
 
@@ -22,7 +24,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <!-- Icons -->
     <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
@@ -30,23 +33,46 @@
     <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/core.css"
+      class="template-customizer-core-css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/css/rtl/theme-default.css"
+      class="template-customizer-theme-css"
+    />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/node-waves/node-waves.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/typeahead-js/typeahead.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/node-waves/node-waves.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+    />
     <!-- Vendor -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css" />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+    />
 
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
 
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
@@ -95,16 +121,37 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
-                  <img src="../../assets/img/branding/logo-i-vuexy.svg" alt="EDISA Logo" style="height:40px;width:auto;">
-                  <span class="app-brand-text demo text-body fw-bold ms-1">EDISA</span>
+                  <img
+                    src="../../assets/img/branding/logo-i-vuexy.svg"
+                    alt="EDISA Logo"
+                    style="height: 40px; width: auto"
+                  />
+                  <span class="app-brand-text demo text-body fw-bold ms-1"
+                    >EDISA</span
+                  >
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-1 pt-2" data-i18n="auth.reset-password.title">Reset Password 🔒</h4>
-              <p class="mb-4" data-i18n="auth.reset-password.description">for <span class="fw-medium" id="reset-password-email" data-i18n="loading">Loading...</span></p>
+              <h4 class="mb-1 pt-2" data-i18n="auth.reset-password.title">
+                Reset Password 🔒
+              </h4>
+              <p class="mb-4" data-i18n="auth.reset-password.description">
+                for
+                <span
+                  class="fw-medium"
+                  id="reset-password-email"
+                  data-i18n="loading"
+                  >Loading...</span
+                >
+              </p>
               <form id="reset-password-form">
                 <div class="mb-3 form-password-toggle">
-                  <label class="form-label" for="reset-password-password" data-i18n="auth.reset-password.new-password-label">New Password</label>
+                  <label
+                    class="form-label"
+                    for="reset-password-password"
+                    data-i18n="auth.reset-password.new-password-label"
+                    >New Password</label
+                  >
                   <div class="input-group input-group-merge">
                     <input
                       type="password"
@@ -113,12 +160,20 @@
                       name="password"
                       data-i18n-placeholder="enterPassword"
                       placeholder="••••••••••••"
-                      aria-describedby="password" />
-                    <span class="input-group-text cursor-pointer"><i class="ti ti-eye-off"></i></span>
+                      aria-describedby="password"
+                    />
+                    <span class="input-group-text cursor-pointer"
+                      ><i class="ti ti-eye-off"></i
+                    ></span>
                   </div>
                 </div>
                 <div class="mb-3 form-password-toggle">
-                  <label class="form-label" for="reset-password-confirm-password" data-i18n="auth.reset-password.confirm-password-label">Confirm Password</label>
+                  <label
+                    class="form-label"
+                    for="reset-password-confirm-password"
+                    data-i18n="auth.reset-password.confirm-password-label"
+                    >Confirm Password</label
+                  >
                   <div class="input-group input-group-merge">
                     <input
                       type="password"
@@ -127,16 +182,29 @@
                       name="confirmPassword"
                       data-i18n-placeholder="enterConfirmPassword"
                       placeholder="••••••••••••"
-                      aria-describedby="password" />
-                    <span class="input-group-text cursor-pointer"><i class="ti ti-eye-off"></i></span>
+                      aria-describedby="password"
+                    />
+                    <span class="input-group-text cursor-pointer"
+                      ><i class="ti ti-eye-off"></i
+                    ></span>
                   </div>
                 </div>
-                <button class="btn btn-primary d-grid w-100 mb-3" data-i18n="auth.reset-password.set-new-password-button">Set new password</button>
+                <button
+                  class="btn btn-primary d-grid w-100 mb-3"
+                  data-i18n="auth.reset-password.set-new-password-button"
+                >
+                  Set new password
+                </button>
 
                 <div class="text-center">
-                  <a href="javascript:void(0)" onclick="window.location.href='/'">
+                  <a
+                    href="javascript:void(0)"
+                    onclick="window.location.href='/'"
+                  >
                     <i class="ti ti-chevron-left scaleX-n1-rtl"></i>
-                    <span data-i18n="auth.reset-password.back-to-login">Back to login</span>
+                    <span data-i18n="auth.reset-password.back-to-login"
+                      >Back to login</span
+                    >
                   </a>
                 </div>
               </form>
